--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Can I WebView… {{ page.title | remove: '`' | escape_once | markdownify | strip_html | strip }}</title>
-	<link rel="stylesheet" href="/assets/css/style.css" />
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/style.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	{%- if jekyll.environment == 'production' -%}
-	<link rel="shortcut icon" href="/assets/images/favicon.ico" />
+	<link rel="shortcut icon" href="{{ site.url }}/assets/images/favicon.ico" />
 	{%- else -%}
-	<link rel="shortcut icon" href="/assets/images/favicon.ico" />
+	<link rel="shortcut icon" href="{{ site.url }}/assets/images/favicon.ico" />
 	{%- endif -%}
-	<link rel="prefetch" href="/assets/js/features.json" />
+	<link rel="prefetch" href="{{ site.url }}/assets/js/features.json" />
 	{%- if page.collection == 'features' -%}
 	<meta property="og:title"
 		content="Can I WebView… {{ page.title | escape_once | markdownify | strip_html | strip }}" />
@@ -23,7 +23,7 @@
 		content="{{ page.title | remove: '`' | escape_once | markdownify | strip_html | strip }}" />
 	<meta name="description"
 		content="{{ page.title | remove: '`' | escape_once | markdownify | strip_html | strip }}" />
-	<meta property="og:image" content="https://www.caniwebview.com/assets/images/og.png" />
+	<meta property="og:image" content="{{ site.url }}/assets/images/og.png" />
 	{%- endif -%}
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
