Relative JS script to the site.url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 		</main>
 		{% include footer.html %}
 	</div>
-	<script src="/assets/js/caniwebview.js" defer></script>
+	<script src="{{ site.url }}/assets/js/caniwebview.js" defer></script>
 </body>
 
 </html>
