Relative site.url for the linked resources

--- a/_layouts/feature.html
+++ b/_layouts/feature.html
@@ -11,7 +11,7 @@ layout: default
 			<span class="baseline">
 				{% if page.baseline and page.baseline.baseline %}
 					<a href="https://developer.mozilla.org/en-US/docs/Glossary/Baseline/Compatibility">
-						<img width="35" height="20" src="/assets/images/baseline.svg" alt="baseline logo">
+						<img width="35" height="20" src="{{ site.url }}/assets/images/baseline.svg" alt="baseline logo">
 						<strong>
 							Widely available {% unless page.baseline.webviewBaseline %}in browsers{% endunless %}
 						</strong>
