--- a/_layouts/feature.html
+++ b/_layouts/feature.html
@@ -74,7 +74,7 @@ layout: default
 					<span>
 						{% assign family-page = site.clients | where:"slug", family-key | first -%}
 						{% if family-page != nil and family-page != "" %}
-						<a href="/clients/{{family-key}}/">
+						<a href="{{ site.url }}/clients/{{family-key}}/">
 							{% endif %}
 							{{ site.data.nicenames.family[family-key] | default: family-key }}
 							{% if family-page != nil and family-page != "" %}
@@ -90,7 +90,7 @@ layout: default
 					<div class="data-client data-client--{{ platform-key | slugify }}">
 						<h4 class="data-platform-name">
 							{% if family-page != nil and family-page != "" %}
-							<a href="/clients/{{family-key}}/#{{ platform-key | slugify }}">
+							<a href="{{ site.url }}/clients/{{family-key}}/#{{ platform-key | slugify }}">
 								{% endif %}
 								{{ site.data.nicenames.platform[platform-key] | default: platform-key }}
 								{% if family-page != nil and family-page != "" %}
