--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,10 +27,10 @@
 	<div class="footer-section">
 		<h2 class="footer-title">Site links</h2>
 		<ul class="footer-links">
-			<li><a href="{{ site.url }}/">Home</a></li>
-			<li><a href="{{ site.url }}/features/">Feature index</a></li>
-			<li><a href="{{ site.url }}/clients/">Compare WebViews</a></li>
-			<li><a href="{{ site.url }}/scoreboard/">WebView Support Scoreboard</a></li>
+			<li><a href="{{ site.baseurl }}/">Home</a></li>
+			<li><a href="{{ site.baseurl }}/features/">Feature index</a></li>
+			<li><a href="{{ site.baseurl }}/clients/">Compare WebViews</a></li>
+			<li><a href="{{ site.baseurl }}/scoreboard/">WebView Support Scoreboard</a></li>
 			<li><a href="https://github.com/WebView-CG/Compatibility-Data-Project">Caniwebview on GitHub</a></li>
 			<li><a href="https://github.com/WebView-CG">WebView Community Group on GitHub</a></li>
 		</ul>
