--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Can I WebView… {{ page.title | remove: '`' | escape_once | markdownify | strip_html | strip }}</title>
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/style.css" />
+	<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	{%- if jekyll.environment == 'production' -%}
-	<link rel="shortcut icon" href="{{ site.url }}/assets/images/favicon.ico" />
+	<link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.ico" />
 	{%- else -%}
-	<link rel="shortcut icon" href="{{ site.url }}/assets/images/favicon.ico" />
+	<link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.ico" />
 	{%- endif -%}
-	<link rel="prefetch" href="{{ site.url }}/assets/js/features.json" />
+	<link rel="prefetch" href="{{ site.baseurl }}/assets/js/features.json" />
 	{%- if page.collection == 'features' -%}
 	<meta property="og:title"
 		content="Can I WebView… {{ page.title | escape_once | markdownify | strip_html | strip }}" />
@@ -23,11 +23,11 @@
 		content="{{ page.title | remove: '`' | escape_once | markdownify | strip_html | strip }}" />
 	<meta name="description"
 		content="{{ page.title | remove: '`' | escape_once | markdownify | strip_html | strip }}" />
-	<meta property="og:image" content="{{ site.url }}/assets/images/og.png" />
+	<meta property="og:image" content="{{ site.baseurl }}/assets/images/og.png" />
 	{%- endif -%}
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-	<link href="{{ site.url }}/feed.xml" rel="alternate" type="application/atom+xml" />
+	<meta property="og:url" content="{{ site.baseurl }}{{ page.url }}" />
+	<link href="{{ site.baseurl }}/feed.xml" rel="alternate" type="application/atom+xml" />
 	<meta name="color-scheme" content="dark" />
 </head>
 
@@ -39,7 +39,7 @@
 		</main>
 		{% include footer.html %}
 	</div>
-	<script src="{{ site.url }}/assets/js/caniwebview.js" defer></script>
+	<script src="{{ site.baseurl }}/assets/js/caniwebview.js" defer></script>
 </body>
 
 </html>
