--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav class="nav" role="navigation">
 	{% for item in site.data.navigation %}
-		<a href="{{ item.link }}" class="tab{% if page.url == item.link %} current{% endif %}">{{ item.name }}</a>
+		<a href="{{ site.baseurl }}{{ item.link }}" class="tab{% if page.url == item.link %} current{% endif %}">{{ item.name }}</a>
 	{% endfor %}
 </nav>
